2007-02-19  Martin Leidig  <mleidig@schlund.de>

	Improved caching of bean descriptors, now they're cached 
	JSONWSProcessor-wide.

	* src/de/schlund/pfixcore/webservice/jsonws/SerializerRegistry.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONSerializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/BeanDescriptor.java
	* src/de/schlund/pfixcore/webservice/jsonws/DeserializerRegistry.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONDeserializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/serializers/BeanSerializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java
	* src/de/schlund/pfixcore/webservice/jsonws/deserializers/BeanDeserializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/BeanDescriptorFactory.java

2007-02-13  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/AbstractXMLServer.java: don't reuse SPDocument
	if it has a pagename that differs from the one in the request

2007-02-12  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/workflow/Context.java (handleRequest): back port of redirects for 
	non-matching/missing page information in URL (e.g. after pageflow)

2007-02-12  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/FactoryInitServlet.java: store exception
	and factory name of factory which caused initialization failure as
	the newly introduced FactoryInitException
	* src/de/schlund/pfixxml/ServletManager.java: check if factories
	are initialized before calling process() in callProcess() and
	throw exception if not
	* src/de/schlund/pfixxml/FactoryInitException.java: added specialized
	exception for factory initialization erros, keeping the factory name
	and the causing Throwable

2007-02-09  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/schema/scriptedflow200602.xsd: 
	* projects/sample1/conf/scriptedflow/forceadult.script.xml: 
	* projects/sample1/conf/scriptedflow/ordershirt.script.xml: 
	Added XML Schema for scripted flows.
